Fix navbar to become vertical sooner on mobile

--- a/styles.css
+++ b/styles.css
@@ -558,8 +558,8 @@ img.icon.inline {
 
 /* NAVBAR */
 
-/* Make navbar vertical on small screens. */
-@media only screen and (max-width: 600px) {
+/* Make navbar vertical on small screens or touch screens. */
+@media only screen and (max-width: 600px), only screen and (hover: none) and (pointer: coarse) and (max-width: 1000px) {
 	.menu.button-container .button {
 		float: none;
 		display: block;
